--- a/configuration/environment-setup.mdx
+++ b/configuration/environment-setup.mdx
@@ -619,7 +619,7 @@ Start with the basic setup and gradually add advanced features as your needs evo
 
 ## Next Steps
 
-- **[Advanced Settings](/configuration/advanced-settings)** - Configure advanced features and optimizations
+- **[Authentication](/configuration/authentication)** - Multi-factor authentication and account security
 - **[GitHub Integration](/configuration/github)** - Set up CI/CD integration
 - **[Troubleshooting](/best-practices/troubleshooting)** - Resolve environment and configuration issues
 - **[Creating Tests](/best-practices/creating-tests)** - Learn how to create effective AI-powered tests 
